# group22-noise-analysis

./: .gitignore  README.md  aggregated_a.csv  group22-data.csv  group22-data.csv.csv
Assignment_2/: Pav_collabGroup^N.csv  dataset_front_gate.csv  dataset_nassau_st_gate.csv  dataset_pearse_st_gate.csv
datasets/: aggregated_A.csv  aggregated_B.csv  dataset_front_gate_afternoon.csv  dataset_front_gate_evening.csv  dataset_front_gate_morning.csv  dataset_nassau_st_gate_afternoon.csv  dataset_nassau_st_gate_evening.csv  dataset_nassau_st_gate_morning.csv  dataset_pearse_st_gate_afternoon.csv  dataset_pearse_st_gate_evening.csv  dataset_pearse_st_gate_morning.csv
preprocessed_data/: front_fri_08_preprocessed.csv  front_fri_13_preprocessed.csv  front_fri_19_preprocessed.csv  front_sun_08_preprocessed.csv  front_sun_13_preprocessed.csv  front_sun_19_preprocessed.csv  front_thu_08_preprocessed.csv  front_thu_13_preprocessed.csv  front_thu_19_preprocessed.csv  front_wed_08_preprocessed.csv  front_wed_13_preprocessed.csv  front_wed_19_preprocessed.csv  nassau_fri_08_preprocessed.csv  nassau_fri_13_preprocessed.csv  nassau_sun_08_preprocessed.csv  nassau_sun_13_preprocessed.csv  nassau_sun_17_preprocessed.csv  nassau_thu_08_preprocessed.csv  nassau_thu_19_preprocessed.csv  nassau_wed_08_preprocessed.csv  pearse_fri_19_preprocessed.csv  pearse_sun_08_preprocessed.csv  pearse_sun_13_preprocessed.csv  pearse_sun_19_preprocessed.csv  pearse_thu_08_preprocessed.csv  (+5 more)
uni_cpp_sound-data-preprocessor_2025/: CMakeLists.txt  uni_cpp_sound-data-preprocessor_2025.cpp
(+42 files in other folders)
